<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblAmount">Your amount:</string>
    <string name="lblHint">$0.00</string>
    <string name="lblTipPercentage">Tip %:</string>
    <string name="fair">10%</string>
    <string name="good">15%</string>
    <string name="great">20%</string>
    <string name="other">Other</string>
    <string name="lblTipAmount">Tip is:</string>
    <string name="lblTip"></string>
    <string name="tip"></string>
    <string name="otherTipPercentage">Enter custom tip %:</string>
    <string name="otherTipPercent">0.0%</string>
    <string name="done">Done</string>

</resources>
