<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ltOtherTipPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otherTipPercentage"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/etOtherTipPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:ems="10"
        android:hint="@string/otherTipPercent" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:onClick="done" />

</LinearLayout>
